--- a/frontend/src/ui/locales/de/generic.yml
+++ b/frontend/src/ui/locales/de/generic.yml
@@ -6,6 +6,7 @@ generic:
   no-entries: 'Keine Einträge'
   no-information: 'Keine Angabe'
   no-matches: 'Keine Treffer'
+  optional: 'optional'
   please-select: 'Bitte auswählen'
   filter-entries: 'Einträge filtern'
   cancel: 'Abbrechen'
@@ -13,6 +14,7 @@ generic:
   edit: 'Bearbeiten'
   delete: 'Löschen'
   apply: 'Übernehmen'
+  close: 'Schließen'
   discard-changes: 'Änderungen verwerfen'
   error: 'Fehler'
   yes: 'Ja'
@@ -65,6 +67,13 @@ generic:
     omnivore: 'Fleisch'
     vegetarian: 'Vegetarisch'
     vegan: 'Vegan'
+  theme:
+    system: 'Automatisch'
+    dark: 'Dunkel'
+    light: 'Hell'
+  language:
+    de: 'Deutsch'
+    en: 'Englisch (Beta)'
   validation:
     required: 'Eingabe ist erforderlich'
     invalid: 'Eingabe enthält ungültige Zeichen'
