implement custom datepicker

--- a/frontend/src/ui/locales/de/generic.yml
+++ b/frontend/src/ui/locales/de/generic.yml
@@ -19,6 +19,7 @@ generic:
   error: 'Fehler'
   yes: 'Ja'
   no: 'Nein'
+  ok: 'OK'
   move-up: 'Nach oben verschieben'
   move-down: 'Nach unten verschieben'
   month:
@@ -34,6 +35,19 @@ generic:
     '9': 'Oktober'
     '10': 'November'
     '11': 'Dezember'
+  month-short:
+    '0': 'Jan'
+    '1': 'Feb'
+    '2': 'Mär'
+    '3': 'Apr'
+    '4': 'Mai'
+    '5': 'Jun'
+    '6': 'Jul'
+    '7': 'Aug'
+    '8': 'Sep'
+    '9': 'Okt'
+    '10': 'Nov'
+    '11': 'Dez'
   role:
     ROLE_ADMIN: 'Admin'
     ROLE_EVENT_PLANNER: 'Reiseplaner:in'
@@ -82,6 +96,7 @@ generic:
     invalid-phone-number: 'Eingabe ist keine gültige Telefon Nummer'
     invalid-email: 'Eingabe ist keine gültige Email Addresse'
     invalid-name: 'Namen dürfen keine Zahlen oder Sonderzeichen enthalten'
+    invalid-date: 'Eingabe ist kein valides Datum'
     must-not-include-lastname: 'Anzeigenamen dürfen nicht den Nachnamen enthalten'
     before: 'Datum muss vor dem {} liegen'
     after: 'Datum muss nach dem {} liegen'
