add slots to batch event edit

--- a/frontend/src/ui/locales/de/domain/event.yml
+++ b/frontend/src/ui/locales/de/domain/event.yml
@@ -14,13 +14,14 @@ event:
     empty: 'noch nicht besetzt'
   status: 'Status'
   name: 'Veranstaltungsname'
+  template: 'Vorlage'
   category: 'Kategorie'
   signup-type: 'Anmeldetyp'
   description: 'Beschreibung'
   start-date: 'Startdatum'
-  crew-on-board: 'Crew an Bord'
+  start-time: 'Crew an Bord'
   end-date: 'Enddatum'
-  crew-off-board: 'Crew von Bord'
+  end-time: 'Crew von Bord'
 registration:
   unknown-user: 'Unbekannter Nutzer'
   guest: 'Gastcrew'
