--- a/frontend/src/ui/locales/de/generic.yml
+++ b/frontend/src/ui/locales/de/generic.yml
@@ -22,6 +22,7 @@ generic:
   ok: 'OK'
   move-up: 'Nach oben verschieben'
   move-down: 'Nach unten verschieben'
+  markdown-supported: 'Markdown wird unterstützt'
   month:
     '0': 'Januar'
     '1': 'Februar'
