--- a/frontend/src/ui/locales/de/views/users.yml
+++ b/frontend/src/ui/locales/de/views/users.yml
@@ -12,7 +12,7 @@ users:
       data: 'Stammdaten'
       contact: 'Kontakt'
       certificates: 'Qualifikationen'
-      events: 'Reisen'
+      events: 'Veranstaltungen'
       roles: 'Anwendungsrollen'
       emergency: 'Notfallinformationen'
       other: 'Sonstige Daten'
