--- a/frontend/src/ui/locales/de/views/home.yml
+++ b/frontend/src/ui/locales/de/views/home.yml
@@ -6,14 +6,15 @@ home:
     state:
       waitinglist: 'Du stehst auf der Warteliste.'
   home-view:
-    loading-events: 'Reisen werden geladen...'
-    no-upcoming-events-title: 'Keine zukünftigen Reisen'
+    loading-events: 'Veranstaltungen werden geladen...'
+    no-upcoming-events-title: 'Keine zukünftigen Veranstaltungen'
     no-upcoming-events-description: >
-      Du hast aktuell keine anstehenden Reisen. Du kannst im Kalender oder der Reiseliste nach Reisen suchen und dich für
-      Reisen anmelden, die du gerne mitfahren möchtest. Du wirst dann auf die Warteliste gesetzt und per Email
-      benachrichtigt, wenn du für die Crew der Reise eingeplant wirst.
-    find-next-event: 'Finde deine nächste Reise'
-    tab-title: 'Meine nächsten Reisen'
+      Du hast aktuell keine anstehenden Veranstaltungen. Du kannst im Kalender oder der Veranstaltungsliste nach 
+      Veranstaltungen suchen und dich für Veranstaltungen anmelden, an denen du gerne teilnehmen möchtest. Je nach
+      Veranstaltungsart wirst du dann zuerst auf die Warteliste gesetzt und per Email benachrichtigt, wenn du für die
+      Crew eingeplant wirst.
+    find-next-event: 'Veranstaltung anzeigen'
+    tab-title: 'Übersicht'
     this-month: 'Diesen Monat'
     next-month: 'Nächsten Monat'
   month-overview:
