--- a/frontend/src/ui/locales/de/domain/event.yml
+++ b/frontend/src/ui/locales/de/domain/event.yml
@@ -16,12 +16,15 @@ event:
   name: 'Veranstaltungsname'
   template: 'Vorlage'
   category: 'Kategorie'
+  type: 'Kategorie'
   signup-type: 'Anmeldetyp'
   description: 'Beschreibung'
   start-date: 'Startdatum'
   start-time: 'Crew an Bord'
   end-date: 'Enddatum'
   end-time: 'Crew von Bord'
+  time: 'Veranstaltungszeit'
+  duration: 'Veranstaltungsdauer'
 registration:
   unknown-user: 'Unbekannter Nutzer'
   guest: 'Gastcrew'
