enable user list view for users with permission read:user-details

--- a/frontend/src/ui/locales/de/navigation.yml
+++ b/frontend/src/ui/locales/de/navigation.yml
@@ -8,6 +8,7 @@ navigation:
   allEvents: 'Alle Veranstaltungen'
   manageEvents: 'Veranstaltungen verwalten'
   manageUsers: 'Nutzer verwalten'
+  listUsers: 'Nutzerliste'
   manageSettings: 'Einstellungen'
   account: 'Mein Profil'
   feedback: 'Feedback'
